<resources>
    <string name="app_name">GR_Doron_Kakuli</string>

    <string name="action_settings">Settings</string>


    <string name="latitude">\u0020Latitude:\u0020</string>
    <string name="longitude">\u0020Longitude:\u0020</string>
    <string name="last_updated">\u0020Last Updated:\u0020</string>
    <string name="speed">\u0020Speed:\u0020</string>


    <string name="enable_track">Enable Track</string>
    <string name="disable_track">Disable Track</string>


</resources>
